# ABCSMC_pymc_by_example

./: .gitignore  README.md  lotka_ABCSMC.py  lotka_ABCSMC_l1dist.py  lotka_ABCSMC_unobserved.py  pyproject.toml  seir_ABCSMC.py  seir_ABCSMC_hierarchical.py
