[project]
name = "abcsmc-pymc-by-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pymc>=5.28.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
